# gdalBindings-r

./: .Rbuildignore  .gitattributes  .gitignore  CRAN-SUBMISSION  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.md  cleanup  cleanup.ucrt  configure  configure.ac  configure.ac.win  configure.win  cran-comments.md
.github/workflows/: rhub.yaml
R/: gdalBindings.R  zzz.R
inst/extdata/: example.tif.aux.xml
inst/include/: gdal.hpp  gdal_bindings.h
man/: GDALOpen.Rd  GDALRasterBand.Rd  createDataset.Rd  formulaCalculate.Rd
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.ucrt.in  RcppExports.cpp  gdal.h  gdal_bindings.h  rasterizeHDF.cpp
